Adjusting user view from /api/auth/me
