# lib/rocketpay_web/swagger/auth.ex
@@ -29,6 +29,25 @@ defmodule RocketpayWeb.Swagger.Auth do
 
         response(500, "Internal server error")
       end
+
+      swagger_path(:me) do
+        tag("Authentication")
+
+        summary("Retorno dos dados do usuário logado")
+
+        get("/api/auth/me")
+        produces("application/json")
+
+        description("Essa é uma descrição do endpoint")
+
+        parameter("Authorization", :header, :string, "Token de autenticação", required: true)
+
+        response(200, "Ok", Schema.ref(:User))
+
+        response(400, "Bad request", Schema.ref(:AuthenticateErrorResponse))
+
+        response(500, "Internal server error")
+      end
     end
   end
 end
